--- a/alpine/libimagequant/APKBUILD
+++ b/alpine/libimagequant/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: larrabee <kafatron@gmail.com>
 # Maintainer: larrabee <kafatron@gmail.com>
 pkgname=libimagequant
-pkgver=2.11.11
+pkgver=2.11.10
 pkgrel=0
 pkgdesc="Small, portable C library for high-quality conversion of RGBA images to 8-bit indexed-color (palette) images"
-url="https://github.com/larrabee/libimagequant"
+url="https://github.com/ImageOptim/libimagequant"
 arch="all"
 license="GPLv3"
 depends=""
-makedepends="make gcc"
-source="https://github.com/larrabee/libimagequant/archive/$pkgver.tar.gz"
+makedepends="make gcc bash"
+source="$pkgname-$pkgver.tar.gz::https://github.com/ImageOptim/libimagequant/archive/$pkgver.tar.gz"
 
 builddir="$srcdir/$pkgname-$pkgver"
 
