--- a/alpine/mozjpeg/APKBUILD
+++ b/alpine/mozjpeg/APKBUILD
@@ -11,7 +11,7 @@ depends=""
 makedepends="nasm pkgconfig autoconf automake"
 replaces="libjpeg libjpeg-turbo"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-utils"
-source="https://github.com/mozilla/mozjpeg/releases/download/v$pkgver/mozjpeg-$pkgver-release-source.tar.gz"
+source="https://github.com/mozilla/mozjpeg/releases/download/v$pkgver/$pkgname-$pkgver-release-source.tar.gz"
 
 builddir="$srcdir/$pkgname"
 
