--- a/alpine/vips/APKBUILD
+++ b/alpine/vips/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Will Jordan <will.jordan@gmail.com>
 # Maintainer: Will Jordan <will.jordan@gmail.com>
 pkgname=vips
-pkgver=8.6.5
+pkgver=8.7.0
 pkgrel=0
 pkgdesc="A fast image processing library with low memory needs"
 url="http://www.vips.ecs.soton.ac.uk/"
@@ -40,3 +40,5 @@ tools() {
 	mkdir -p "$subpkgdir"/usr/
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
+
+sha512sums="dd2e59fb26215c95b7632e83c11d3632c6be55ae59f787074bfb0bb9b3ed6105502c7699d3ac6508dba701e98c27e9a1d33f86e8cd97c44fc992626c38dbc90b  vips-8.7.0.tar.gz"
