--- a/alpine/vips/APKBUILD
+++ b/alpine/vips/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Will Jordan <will.jordan@gmail.com>
 # Maintainer: Will Jordan <will.jordan@gmail.com>
 pkgname=vips
-pkgver=8.7.4
+pkgver=8.8.0
 pkgrel=0
 pkgdesc="A fast image processing library with low memory needs"
 url="http://www.vips.ecs.soton.ac.uk/"
@@ -13,15 +13,12 @@ makedepends="$depends_dev fftw-dev giflib-dev glib-dev libpng-dev libwebp-dev
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tools"
 source="https://github.com/libvips/libvips/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz"
 
-builddir="$srcdir/$pkgname-$pkgver"
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
 		--enable-debug=no \
-		--without-python \
 		--without-gsf \
 		--disable-static \
 		--mandir=/usr/share/man \
@@ -30,8 +27,11 @@ build() {
 	make
 }
 
+check() {
+	make check
+}
+
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -41,4 +41,4 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="ae55c59387d7108301878f096c21f88522359e3ecf314c3dda66c53b3e7f26ed231dadb8c01e73efea8c89970db032dd088c85be4bec1032a556f7211cd05c24  vips-8.7.4.tar.gz"
+sha512sums="2058558bc75a7854121c9f50e2fb3424f397a221c31eb30abd297d12bc3d5b60662ddf213d68cc801318c5ff90f275b9ed74e8e8a23f6501cc6c70bf7431858e  vips-8.8.0.tar.gz"
