--- a/alpine/tiff/APKBUILD
+++ b/alpine/tiff/APKBUILD
@@ -2,23 +2,25 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer: Michael Mason <ms13sp@gmail.com>
 pkgname=tiff
-pkgver=4.0.10
-pkgrel=1
+pkgver=4.1.0
+pkgrel=0
 pkgdesc="Provides support for the Tag Image File Format or TIFF"
 url="http://www.libtiff.org"
 arch="all"
 license="libtiff"
-depends=
-depends_dev="zlib-dev mozjpeg-dev"
+depends_dev="zlib-dev libjpeg-turbo-dev"
 makedepends="libtool autoconf automake $depends_dev"
+checkdepends="diffutils"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-tools libtiffxx:_libtiffxx"
-builddir="$srcdir/$pkgname-$pkgver"
-source="http://download.osgeo.org/libtiff/$pkgname-$pkgver.tar.gz
+source="http://download.osgeo.org/libtiff/tiff-$pkgver.tar.gz
 	CVE-2018-12900.patch
-	CVE-2019-14973-rebased.patch
 	"
 
 # secfixes:
+#   4.0.10-r2:
+#     - CVE-2019-10927
+#   4.0.10-r1:
+#     - CVE-2019-14973
 #   4.0.10-r0:
 #     - CVE-2018-12900
 #     - CVE-2018-18557
@@ -93,6 +95,5 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="d213e5db09fd56b8977b187c5a756f60d6e3e998be172550c2892dbdb4b2a8e8c750202bc863fe27d0d1c577ab9de1710d15e9f6ed665aadbfd857525a81eea8  tiff-4.0.10.tar.gz
-c321f1d4e5d334cdb3b0800299e8165055c040c0c030220769ccfdadcc7fd35a0f3231115f44dc86fe5e34f32eafe1074aa85495a744717f8fc10c0cab2ab085  CVE-2018-12900.patch
-4567184ea17028dbf90753dbebce221881ec26632d88f02d4f6b56556fc19bb9134523f16487707fdd908f21c7bc4660103d0a95f3ccf0890ad4f0d93e81c503  CVE-2019-14973-rebased.patch"
+sha512sums="fd541dcb11e3d5afaa1ec2f073c9497099727a52f626b338ef87dc93ca2e23ca5f47634015a4beac616d4e8f05acf7b7cd5797fb218758cc2ad31b390491c5a6  tiff-4.1.0.tar.gz
+c321f1d4e5d334cdb3b0800299e8165055c040c0c030220769ccfdadcc7fd35a0f3231115f44dc86fe5e34f32eafe1074aa85495a744717f8fc10c0cab2ab085  CVE-2018-12900.patch"
