--- a/alpine/vips/APKBUILD
+++ b/alpine/vips/APKBUILD
@@ -1,17 +1,18 @@
 # Contributor: Will Jordan <will.jordan@gmail.com>
 # Maintainer: Will Jordan <will.jordan@gmail.com>
 pkgname=vips
-pkgver=8.8.0
-pkgrel=0
+pkgver=8.8.3
+pkgrel=2
 pkgdesc="A fast image processing library with low memory needs"
 url="http://www.vips.ecs.soton.ac.uk/"
-arch="all !s390x"
+arch="all !s390x !ppc64le" # test_seq.sh fails on ppc64le
 license="LGPL-2.1-or-later"
-depends_dev="mozjpeg-dev libexif-dev lcms2-dev"
-makedepends="$depends_dev fftw-dev giflib-dev glib-dev libpng-dev libwebp-dev
-	expat-dev orc-dev tiff-dev"
+makedepends="expat-dev fftw-dev giflib-dev glib-dev lcms2-dev
+	libexif-dev mozjpeg-dev libpng-dev libwebp-dev
+	orc-dev tiff-dev libheif-dev"
+checkdepends="bc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tools"
-source="https://github.com/libvips/libvips/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/libvips/libvips/releases/download/v$pkgver/vips-$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -41,4 +42,4 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="2058558bc75a7854121c9f50e2fb3424f397a221c31eb30abd297d12bc3d5b60662ddf213d68cc801318c5ff90f275b9ed74e8e8a23f6501cc6c70bf7431858e  vips-8.8.0.tar.gz"
+sha512sums="fc7dc0a20625380af9e83aae88e6f9ff223d608b0915b9687e6c9fa69c026f3bbfbed5e5be90c0d746f0718d0249eefd97ff16935237e1e508378c9560edc5ff  vips-8.8.3.tar.gz"
