--- a/alpine/tiff/APKBUILD
+++ b/alpine/tiff/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="Provides support for the Tag Image File Format or TIFF"
 url="http://www.libtiff.org"
 arch="all"
 license="libtiff"
-depends_dev="zlib-dev libjpeg-turbo-dev"
+depends_dev="zlib-dev mozjpeg-dev"
 makedepends="libtool autoconf automake $depends_dev"
 checkdepends="diffutils"
 subpackages="$pkgname-doc $pkgname-dev $pkgname-tools libtiffxx:_libtiffxx"
