--- a/alpine/lcms2/APKBUILD
+++ b/alpine/lcms2/APKBUILD
@@ -8,7 +8,7 @@ url="http://www.littlecms.com"
 arch="all"
 license="MIT"
 depends=""
-depends_dev="libjpeg-turbo-dev tiff-dev zlib-dev"
+depends_dev="mozjpeg-dev tiff-dev zlib-dev"
 makedepends="$depends_dev"
 install=""
 subpackages="$pkgname-dev $pkgname-doc $pkgname-utils"
