--- a/alpine/lcms2/APKBUILD
+++ b/alpine/lcms2/APKBUILD
@@ -1,29 +1,19 @@
 # Contributor: Sergei Lukin <sergej.lukin@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lcms2
-pkgver=2.9
-pkgrel=1
+pkgver=2.11
+pkgrel=0
 pkgdesc="Color Management Engine"
 url="http://www.littlecms.com"
 arch="all"
-license="MIT"
-depends=""
+license="MIT GPL-3.0-only"
 depends_dev="mozjpeg-dev tiff-dev zlib-dev"
 makedepends="$depends_dev"
-install=""
 subpackages="$pkgname-dev $pkgname-doc $pkgname-utils"
-source="http://www.littlecms.com/$pkgname-$pkgver.tar.gz
-	CVE-2018-16435.patch
-	"
-
-# secfixes:
-#   2.9-r1:
-#     - CVE-2018-16435
-#   2.8-r1:
-#     - CVE-2016-10165
+source="$pkgname-$pkgver.tar.gz::https://github.com/mm2/Little-CMS/archive/$pkgver.tar.gz"
+builddir="$srcdir/Little-CMS-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -41,12 +31,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -56,5 +44,4 @@ utils() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="70b1c51fa8d137d5072425e580745ff1fbf49c6e8bb1da0a8adb0647d3b7c095208793cb02de1e8d1a01363b8575fa60c61bedbff99bbec57a44228239cb00e5  lcms2-2.9.tar.gz
-9f2b0c72b7be0747fcdc71391bea1d1579a7b7ae7b6e8ac861f9faa603b4415e8cdd3c183bdeed444387bc618c16a028d74813a3d0040d70a0f474db2c90d832  CVE-2018-16435.patch"
+sha512sums="dce2bcda29b3e7200b748d4f2345c55ae5d20ba00e1966886bbeaf7fb5d134420963ee1b3fd4e72297f42b0e131146ac72d45579f0871f2dc47385ba5cad1491  lcms2-2.11.tar.gz"
