--- a/alpine/vips/APKBUILD
+++ b/alpine/vips/APKBUILD
@@ -1,15 +1,16 @@
 # Contributor: Will Jordan <will.jordan@gmail.com>
 # Maintainer: Will Jordan <will.jordan@gmail.com>
 pkgname=vips
-pkgver=8.8.3
-pkgrel=2
+pkgver=8.10.3
+pkgrel=0
 pkgdesc="A fast image processing library with low memory needs"
 url="http://www.vips.ecs.soton.ac.uk/"
-arch="all !s390x !ppc64le" # test_seq.sh fails on ppc64le
+arch="all !s390x !ppc64le !mips !mips64" # test_seq.sh fails on ppc64le
 license="LGPL-2.1-or-later"
 makedepends="expat-dev fftw-dev giflib-dev glib-dev lcms2-dev
 	libexif-dev mozjpeg-dev libpng-dev libwebp-dev
-	orc-dev tiff-dev libheif-dev"
+	orc-dev tiff-dev libheif-dev gobject-introspection-dev
+	libimagequant-dev librsvg-dev"
 checkdepends="bc"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang $pkgname-tools"
 source="https://github.com/libvips/libvips/releases/download/v$pkgver/vips-$pkgver.tar.gz"
@@ -21,6 +22,7 @@ build() {
 		--prefix=/usr \
 		--enable-debug=no \
 		--without-gsf \
+		--with-imagequant \
 		--disable-static \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
@@ -42,4 +44,4 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="fc7dc0a20625380af9e83aae88e6f9ff223d608b0915b9687e6c9fa69c026f3bbfbed5e5be90c0d746f0718d0249eefd97ff16935237e1e508378c9560edc5ff  vips-8.8.3.tar.gz"
+sha512sums="f337717e30dcd5bf8efe089ab5579af0938e0172c9aa87ab03120ea838378e3cf5ca6477d4f32f5eeeed56fe8e6e0ab8091c7bb5fe2be07a8bfa545aa15271c7  vips-8.10.3.tar.gz"
